<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arsitektur_android"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application"
            android:background="#FFC107"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_framework"
            android:background="#03A9F4"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android_runtime_art"
            android:background="#2487FF"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/libraries"
            android:background="#4CAF50"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linux_kernel"
            android:background="#F44336"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tvDeviceInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineSpacingExtra="6dp"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kembali_ke_sejarah"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>